[tool.poetry]
name = "homework 14-1"
version = "0.1.0"
description = ""
authors = ["Konstantin Antonov <kostaantonov59@mail.ru>"]
readme = "README.md"
packages = [{include = "homework 14"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
