[tool.poetry]
name = "homework 14-1"
version = "0.1.0"
description = ""
authors = ["Konstantin Antonov <kostaantonov59@mail.ru>"]
readme = "README.md"
packages = [{include = "homework 14"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
